--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,13 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Social Network</title>
+    <style>
+      /* html, body, #root {
+        min-height: 100%;
+        height: 100%;
+        height: fit-content;
+      } */
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
